cdk.out/DXNetworkStack.template.json
{
 "Resources": {
  "DXVpc39435ABC": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "172.29.117.0/25",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/Resource"
   }
  },
  "DXVpcDXPublicSubnetSubnet1Subnet6D444E29": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "172.29.117.0/28",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "DXPublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1/Subnet"
   }
  },
  "DXVpcDXPublicSubnetSubnet1RouteTable8D037114": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1/RouteTable"
   }
  },
  "DXVpcDXPublicSubnetSubnet1RouteTableAssociation1ED616B6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DXVpcDXPublicSubnetSubnet1RouteTable8D037114"
    },
    "SubnetId": {
     "Ref": "DXVpcDXPublicSubnetSubnet1Subnet6D444E29"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1/RouteTableAssociation"
   }
  },
  "DXVpcDXPublicSubnetSubnet1DefaultRoute7735B81F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DXVpcIGWDF3AFC65"
    },
    "RouteTableId": {
     "Ref": "DXVpcDXPublicSubnetSubnet1RouteTable8D037114"
    }
   },
   "DependsOn": [
    "DXVpcVPCGW7E3FE398"
   ],
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1/DefaultRoute"
   }
  },
  "DXVpcDXPublicSubnetSubnet1EIP0F0ED7F6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1/EIP"
   }
  },
  "DXVpcDXPublicSubnetSubnet1NATGateway3A8B8424": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "DXVpcDXPublicSubnetSubnet1EIP0F0ED7F6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "DXVpcDXPublicSubnetSubnet1Subnet6D444E29"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1"
     }
    ]
   },
   "DependsOn": [
    "DXVpcDXPublicSubnetSubnet1DefaultRoute7735B81F",
    "DXVpcDXPublicSubnetSubnet1RouteTableAssociation1ED616B6"
   ],
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet1/NATGateway"
   }
  },
  "DXVpcDXPublicSubnetSubnet2SubnetFDEABBB7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "172.29.117.16/28",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "DXPublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2/Subnet"
   }
  },
  "DXVpcDXPublicSubnetSubnet2RouteTable44E84A37": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2/RouteTable"
   }
  },
  "DXVpcDXPublicSubnetSubnet2RouteTableAssociation835123D0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DXVpcDXPublicSubnetSubnet2RouteTable44E84A37"
    },
    "SubnetId": {
     "Ref": "DXVpcDXPublicSubnetSubnet2SubnetFDEABBB7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2/RouteTableAssociation"
   }
  },
  "DXVpcDXPublicSubnetSubnet2DefaultRoute502CB059": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DXVpcIGWDF3AFC65"
    },
    "RouteTableId": {
     "Ref": "DXVpcDXPublicSubnetSubnet2RouteTable44E84A37"
    }
   },
   "DependsOn": [
    "DXVpcVPCGW7E3FE398"
   ],
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2/DefaultRoute"
   }
  },
  "DXVpcDXPublicSubnetSubnet2EIP97451729": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2/EIP"
   }
  },
  "DXVpcDXPublicSubnetSubnet2NATGateway3E0D7198": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "DXVpcDXPublicSubnetSubnet2EIP97451729",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "DXVpcDXPublicSubnetSubnet2SubnetFDEABBB7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2"
     }
    ]
   },
   "DependsOn": [
    "DXVpcDXPublicSubnetSubnet2DefaultRoute502CB059",
    "DXVpcDXPublicSubnetSubnet2RouteTableAssociation835123D0"
   ],
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPublicSubnetSubnet2/NATGateway"
   }
  },
  "DXVpcDXPrivateSubnetSubnet1SubnetBC118A72": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "172.29.117.32/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "DXPrivateSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet1/Subnet"
   }
  },
  "DXVpcDXPrivateSubnetSubnet1RouteTable600846A0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet1/RouteTable"
   }
  },
  "DXVpcDXPrivateSubnetSubnet1RouteTableAssociation9DDA485C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DXVpcDXPrivateSubnetSubnet1RouteTable600846A0"
    },
    "SubnetId": {
     "Ref": "DXVpcDXPrivateSubnetSubnet1SubnetBC118A72"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet1/RouteTableAssociation"
   }
  },
  "DXVpcDXPrivateSubnetSubnet1DefaultRoute357C64AD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DXVpcDXPublicSubnetSubnet1NATGateway3A8B8424"
    },
    "RouteTableId": {
     "Ref": "DXVpcDXPrivateSubnetSubnet1RouteTable600846A0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet1/DefaultRoute"
   }
  },
  "DXVpcDXPrivateSubnetSubnet2Subnet92453131": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "172.29.117.48/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "DXPrivateSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet2/Subnet"
   }
  },
  "DXVpcDXPrivateSubnetSubnet2RouteTable08A3688C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet2/RouteTable"
   }
  },
  "DXVpcDXPrivateSubnetSubnet2RouteTableAssociationCFFB638A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DXVpcDXPrivateSubnetSubnet2RouteTable08A3688C"
    },
    "SubnetId": {
     "Ref": "DXVpcDXPrivateSubnetSubnet2Subnet92453131"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet2/RouteTableAssociation"
   }
  },
  "DXVpcDXPrivateSubnetSubnet2DefaultRoute38385829": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DXVpcDXPublicSubnetSubnet2NATGateway3E0D7198"
    },
    "RouteTableId": {
     "Ref": "DXVpcDXPrivateSubnetSubnet2RouteTable08A3688C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXPrivateSubnetSubnet2/DefaultRoute"
   }
  },
  "DXVpcDXIsolatedSubnetSubnet1Subnet53B6E433": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "172.29.117.64/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "DXIsolatedSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet1/Subnet"
   }
  },
  "DXVpcDXIsolatedSubnetSubnet1RouteTableAF7E4DD4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet1/RouteTable"
   }
  },
  "DXVpcDXIsolatedSubnetSubnet1RouteTableAssociation648D1A19": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DXVpcDXIsolatedSubnetSubnet1RouteTableAF7E4DD4"
    },
    "SubnetId": {
     "Ref": "DXVpcDXIsolatedSubnetSubnet1Subnet53B6E433"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet1/RouteTableAssociation"
   }
  },
  "DXVpcDXIsolatedSubnetSubnet2Subnet06092F7A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "172.29.117.80/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "DXIsolatedSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet2/Subnet"
   }
  },
  "DXVpcDXIsolatedSubnetSubnet2RouteTable50A2BDC7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet2/RouteTable"
   }
  },
  "DXVpcDXIsolatedSubnetSubnet2RouteTableAssociation290AA7CF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DXVpcDXIsolatedSubnetSubnet2RouteTable50A2BDC7"
    },
    "SubnetId": {
     "Ref": "DXVpcDXIsolatedSubnetSubnet2Subnet06092F7A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXIsolatedSubnetSubnet2/RouteTableAssociation"
   }
  },
  "DXVpcIGWDF3AFC65": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/IGW"
   }
  },
  "DXVpcVPCGW7E3FE398": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "DXVpcIGWDF3AFC65"
    },
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/VPCGW"
   }
  },
  "DXVpcDXSSMMessagesVPCEndpointSecurityGroup12FF4782": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "DXNetworkStack/DXVpc/DXSSMMessagesVPCEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "DXVpc39435ABC",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "DXVpc39435ABC",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXSSMMessagesVPCEndpoint/SecurityGroup/Resource"
   }
  },
  "DXVpcDXSSMMessagesVPCEndpointEE605264": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "DXVpcDXSSMMessagesVPCEndpointSecurityGroup12FF4782",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-west-2.ssmmessages",
    "SubnetIds": [
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet1SubnetBC118A72"
     },
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet2Subnet92453131"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXSSMMessagesVPCEndpoint/Resource"
   }
  },
  "DXVpcDXEC2MessagesVPCEndpointSecurityGroup05071D15": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "DXNetworkStack/DXVpc/DXEC2MessagesVPCEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "DXVpc39435ABC",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "DXVpc39435ABC",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXEC2MessagesVPCEndpoint/SecurityGroup/Resource"
   }
  },
  "DXVpcDXEC2MessagesVPCEndpointB19ADFBF": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "DXVpcDXEC2MessagesVPCEndpointSecurityGroup05071D15",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-west-2.ec2messages",
    "SubnetIds": [
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet1SubnetBC118A72"
     },
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet2Subnet92453131"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXEC2MessagesVPCEndpoint/Resource"
   }
  },
  "DXVpcDXSSMVPCEndpointSecurityGroup61195080": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "DXNetworkStack/DXVpc/DXSSMVPCEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "DXVpc39435ABC",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "DXVpc39435ABC",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "DXNetworkStack/DXVpc"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXSSMVPCEndpoint/SecurityGroup/Resource"
   }
  },
  "DXVpcDXSSMVPCEndpoint04755C95": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "DXVpcDXSSMVPCEndpointSecurityGroup61195080",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-west-2.ssm",
    "SubnetIds": [
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet1SubnetBC118A72"
     },
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet2Subnet92453131"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXVpc/DXSSMVPCEndpoint/Resource"
   }
  },
  "DXSecurityGroup30704A1C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "DXNetworkStack/DXSecurityGroup",
    "GroupName": "DX",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:ALL TRAFFIC",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXSecurityGroup/Resource"
   }
  },
  "DXPublicLB0C9DFC48": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Name": "DXPublicLB",
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "DXSecurityGroup30704A1C",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "DXVpcDXPublicSubnetSubnet1Subnet6D444E29"
     },
     {
      "Ref": "DXVpcDXPublicSubnetSubnet2SubnetFDEABBB7"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "DXVpcDXPublicSubnetSubnet1DefaultRoute7735B81F",
    "DXVpcDXPublicSubnetSubnet1RouteTableAssociation1ED616B6",
    "DXVpcDXPublicSubnetSubnet2DefaultRoute502CB059",
    "DXVpcDXPublicSubnetSubnet2RouteTableAssociation835123D0"
   ],
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXPublicLB/Resource"
   }
  },
  "DXDatabaseSubnetGroupF6B137D4": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for DXDatabase database",
    "SubnetIds": [
     {
      "Ref": "DXVpcDXIsolatedSubnetSubnet1Subnet53B6E433"
     },
     {
      "Ref": "DXVpcDXIsolatedSubnetSubnet2Subnet06092F7A"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXDatabase/SubnetGroup/Default"
   }
  },
  "DXDatabaseSecurityGroup20AFE65A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for DXDatabase database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:5432",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXDatabase/SecurityGroup/Resource"
   }
  },
  "DXNetworkStackDXDatabaseSecret684A66483fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"DXdbadmin\"}"
    },
    "Name": "DXdbcredentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXDatabase/Secret/Resource"
   }
  },
  "DXDatabaseSecretAttachmentF656502C": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "DXNetworkStackDXDatabaseSecret684A66483fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "DXDatabaseEEBA4F78"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXDatabase/Secret/Attachment/Resource"
   }
  },
  "DXDatabaseEEBA4F78": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "100",
    "BackupRetentionPeriod": 3,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.small",
    "DBInstanceIdentifier": "dx",
    "DBName": "DX",
    "DBSubnetGroupName": {
     "Ref": "DXDatabaseSubnetGroupF6B137D4"
    },
    "DeleteAutomatedBackups": true,
    "DeletionProtection": true,
    "Engine": "postgres",
    "EngineVersion": "13.13",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DXNetworkStackDXDatabaseSecret684A66483fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "DXdbadmin",
    "PubliclyAccessible": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "DXDatabaseSecurityGroup20AFE65A",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXDatabase/Resource"
   }
  },
  "DXClusterBEB5274B": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "DXCluster"
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXCluster/Resource"
   }
  },
  "DXECRVPCEndpointSecurityGroupDA43F092": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "DXNetworkStack/DXECRVPCEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "DXVpc39435ABC",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "DXVpc39435ABC",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXECRVPCEndpoint/SecurityGroup/Resource"
   }
  },
  "DXECRVPCEndpoint84857316": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "DXECRVPCEndpointSecurityGroupDA43F092",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-west-2.ecr.api",
    "SubnetIds": [
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet1SubnetBC118A72"
     },
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet2Subnet92453131"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXECRVPCEndpoint/Resource"
   }
  },
  "DXECRDockerVPCEndpointSecurityGroupC5ECD54B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "DXNetworkStack/DXECRDockerVPCEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "DXVpc39435ABC",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "DXVpc39435ABC",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXECRDockerVPCEndpoint/SecurityGroup/Resource"
   }
  },
  "DXECRDockerVPCEndpoint2E281717": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "DXECRDockerVPCEndpointSecurityGroupC5ECD54B",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-west-2.ecr.dkr",
    "SubnetIds": [
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet1SubnetBC118A72"
     },
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet2Subnet92453131"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXECRDockerVPCEndpoint/Resource"
   }
  },
  "DXS3VPCEndpoint674C5C40": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet1RouteTable600846A0"
     },
     {
      "Ref": "DXVpcDXPrivateSubnetSubnet2RouteTable08A3688C"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "DXVpc39435ABC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/DXS3VPCEndpoint/Resource"
   }
  },
  "lsitdxappsenvvarsB00EB75A": {
   "Type": "AWS::S3::Bucket",
   "Properties": {
    "BucketName": "lsit-dx-apps-env-vars"
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/lsit-dx-apps-env-vars/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/11Ry27CMBD8Fu7GLaBW6pEAQkhVFQHiWm2cBVyMHdlrEIry73Vi8hCnHc+Ox7PrKZ98TPj7CO5uLPLLWMmMlzsCcWGB+i1RTHl5KARbHPUhXbDUZ0qKnc80Us31aGs84R4yhT3fc3PnjJBA0uhOXIPVJq3LD9AaCO/wYKmVtwB7440mtAG3gpjkeZpTyHq+oibW6I4gMMRd6bwwMpA7FN5Keqyt8UUT7JUIXp36aTowqBgqcCSFMpBnoEALqU+3sJR5UYRNNBN9h17S9NDWlsNzxWzueLkEggwcbrSjmmdxvi7FMhkSrTqEtXEJy6S9WTHXsO4KGk5oeRmnqoWx7MGekAab6QSvnTCdCOEWyjuK0Z8wPDLjZeLFJT4fUVWxLTrjrWj+rsUVSx90Nvptxr/45+jPSTm2XpO8It/G+g9MkErbZwIAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "DXNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
